# courtVision

./: .env.example  .gitignore  README.md  TEST_SETUP_COMPLETE.md  WEBSOCKET_LEADERBOARD_SETUP.md  postman_collection.json  postman_environment.json
backend/: pom.xml
backend/src/main/java/com/courtvision/: CourtVisionApplication.java
backend/src/main/java/com/courtvision/config/: KafkaConfig.java  NbaApiConfig.java  RestTemplateConfig.java  SecurityConfig.java  WebSocketConfig.java
backend/src/main/resources/: application.properties
backend/src/test/resources/: application-test.properties
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Leaderboard.tsx  LeaderboardRow.tsx  LeaderboardWidget.tsx  ProtectedRoute.js
frontend/src/components/league/: PlayerRosterCard.css  PlayerRosterCard.js
frontend/src/components/modals/: CreateLeagueModal.css  CreateLeagueModal.js  InvitePlayersModal.css  InvitePlayersModal.js
frontend/src/context/: AuthContext.js  LeagueContext.js
frontend/src/pages/: AuthPages.css  DashboardPage.css  DashboardPage.js  LeaderboardPage.tsx  LeagueDetailPage.css  LeagueDetailPage.js  LeaguesListPage.css  LeaguesListPage.js  LoginPage.js  RegisterPage.js  SignupPage.tsx
frontend/src/services/: leaderboardService.ts  tokenService.ts  walletService.ts
oracle/: Anchor.toml  Cargo.toml
oracle/programs/courtvision_oracle/: Cargo.toml
oracle/programs/courtvision_oracle/src/: lib.rs
scrape/: nba_players.csv  players.txt  scrape.py
(+65 files in other folders)
