[workspace]
members = ["programs/courtvision_oracle"]

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }

[package]
name = "courtvision_oracle"
version = "0.1.0"
description = "CourtVision Oracle Program for Winner Announcements"
edition = "2021"

[[bin]]
name = "courtvision_oracle"
path = "src/lib.rs"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = "1.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
