[package]
name = "courtvision_oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "1.18"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
